# ministry-backend

./: .env  create_elastic_index.py  elastic-docker-compose.yml  pyproject.toml
src/: __init__.py
src/apografi/: sync_dictionaries.py  sync_organizations.py
src/blueprints/: auth.py  search.py  upload.py
src/models/: user.py
